# elaborato_chat

./: CMakeLists.txt  Chat.cpp  Chat.h  Chat_registry.cpp  Chat_registry.h  Message.cpp  Message.h  User.cpp  User.h  chat.cpp  chat.h  chat_registry.cpp  chat_registry.h  main.cpp  message.cpp  message.h  user.cpp  user.h
test/: CMakeLists.txt  Chat_registry_test.cpp  Chat_test.cpp  Message_test.cpp  User_test.cpp  runAllTest.cpp
test/GoogleTest/googletest/: CMakeLists.txt
test/GoogleTest/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest.h
test/GoogleTest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h
test/GoogleTest/googletest/include/gtest/internal/custom/: gtest-port.h  gtest-printers.h  gtest.h
test/GoogleTest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-printers.cc  gtest.cc
